--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 1920px; height: 1080px"></div>
+    <div class="webgl-content"style="width: 100%; height: 100%">
+      <div id="unityContainer" ></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
