--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content"style="width: 100%; height: 100%">
+    <div class="webgl-content" style="width: 100%; height: 100%">
       <div id="unityContainer" style="width: 100%; height: 100%"></div>
-      <!-- <div class="footer"> -->
-        <!-- <div class="webgl-logo"></div>
+      <!-- <div class="footer">
+        <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">ChaiyiMusuemProjectGame2</div> -->
-      <!-- </div> -->
+        <div class="title">ChaiyiMusuemProjectGame2</div>
+      </div> -->
     </div>
   </body>
 </html>
