--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | ChaiyiMusuemProjectGame2</title>
+    <title>穿越諸羅城 | 嘉義市立博物館</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
